--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,14 @@
+appdirs==1.4.4
 APScheduler==3.6.3
 certifi==2020.6.20
 cffi==1.14.3
 chardet==3.0.4
 cryptography==3.1.1
 decorator==4.4.2
+distlib==0.3.1
+filelock==3.0.12
 idna==2.10
+importlib-metadata==2.0.0
 pycparser==2.20
 python-telegram-bot==13.0
 pytz==2020.1
@@ -13,3 +17,5 @@ six==1.15.0
 tornado==6.0.4
 tzlocal==2.1
 urllib3==1.25.10
+virtualenv==20.0.33
+zipp==3.3.0
