--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,34 @@
 appdirs==1.4.4
 APScheduler==3.6.3
+asgiref==3.2.10
 certifi==2020.6.20
 cffi==1.14.3
 chardet==3.0.4
 cryptography==3.1.1
 decorator==4.4.2
 distlib==0.3.1
+dj-database-url==0.5.0
+Django==3.1.2
+django-heroku==0.3.1
 filelock==3.0.12
+gunicorn==20.0.4
 idna==2.10
 importlib-metadata==2.0.0
+pbr==5.5.0
+psycopg2==2.8.6
 pycparser==2.20
+pyTelegramBotAPI==3.7.3
 python-telegram-bot==13.0
 pytz==2020.1
 requests==2.24.0
 six==1.15.0
+sqlparse==0.4.1
+stevedore==3.2.2
 tornado==6.0.4
 tzlocal==2.1
 urllib3==1.25.10
 virtualenv==20.0.33
+virtualenv-clone==0.5.4
+virtualenvwrapper==4.8.4
+whitenoise==5.2.0
 zipp==3.3.0
